--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,13 @@
   <title>TheBizness</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag :defaults %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete %> | <%= link_to "Profile", user_path(current_user)%> | <%= link_to "Users", users_path %>
 <%= yield %>
 
 </body>
