--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 <p class="notice"><%= notice %></p>
 <p class="alert"><%= alert %></p>
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %> | <%= link_to "Profile", user_path(current_user)%> | <%= link_to "Users", users_path %>
+<%= link_to "Sign out", destroy_user_session_path, :method => :delete %> | <%= link_to "Profile", profile_path %> | <%= link_to "Users", users_path %>
 <%= yield %>
 
 </body>
