--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -16,5 +16,16 @@
         <div><%= f.label :image_path, 'Update Profile Image'%></div>
         <div><%= f.file_field :image_path %></div>
     </div>
-    <%= f.submit "Update profile", :class => "submit" %>
+    <%= f.submit "Update profile" %>
+<% end %>
+<hr />
+<h3>New Post</h3>
+<%= form_for Post.new do |p| %>
+	<div><%= p.text_area :content, :placeholder => 'Say Something...' %></div>
+	<%= p.submit "Post" %>
+<% end %>
+<hr />
+<h3>Posts</h3>
+<% @user.posts.recent().each do |p| %>
+	<div><%= p.content %></div>
 <% end %>
