save point for user form with location attributes

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,6 @@
 <% @users.each do |u| %>
 	<div>
+	    <div><%= image_tag u.image_path.url(:profile) %></div>
 		<div><%= u.full_name %></div>
 		<div><%= link_to "View", u %></div>
 	</div>
