--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,21 +1,31 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
-  
-  <div><%= f.label :birthday %><br />
-  <%= f.date_select :birthday, :start_year => 1900 %></div>
-
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
-
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "Sign up" %></div>
+<div class="login-form">
+    <h2>Sign up</h2>
+    <%= devise_error_messages! %>
+    <div class="inner-form-wrap">
+        <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
+            
+        
+            <div class="input">
+                <%= f.label :email %>
+                <%= f.email_field :email, :autofocus => true %>
+            </div>
+          
+            <div class="input">
+                <%= f.label :birthday %>
+                <%= f.date_select :birthday, :start_year => 1900 %>
+            </div>
+        
+            <div class="input">
+                <%= f.label :password %>
+                <%= f.password_field :password %>
+            </div>
+        
+            <div class="input">
+                <%= f.label :password_confirmation %>
+                <%= f.password_field :password_confirmation %>
+            </div>
+        
+            <%= f.submit "Sign up", :class => 'btn save' %>
+      </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
+</div>
