--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,15 +4,21 @@
   <title>TheBizness</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag :defaults %>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<%= link_to "Sign out", destroy_user_session_path, :method => :delete %> | <%= link_to "Profile", profile_path %> | <%= link_to "Users", users_path %> |
-<%= link_to "Posts", posts_path %>
-<%= yield %>
+    
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
+    <%= link_to "Posts", posts_path %>
+    
+    <%= render :partial => "layouts/navigation" %>
+    
+    <div class="content-body">
+        <%= yield %>
+    </div>
 
 </body>
 </html>
