--- a/app/assets/stylesheets/modules/_general.scss
+++ b/app/assets/stylesheets/modules/_general.scss
@@ -17,6 +17,12 @@ a {
 :-ms-input-placeholder {  
    color: #f2f2f2;  
 }
+
+h1 {
+    font-size: 24px;
+    margin-bottom: 20px
+}
+
 .left {
     float: left;
 }
