--- a/app/assets/stylesheets/modules/_layout.scss
+++ b/app/assets/stylesheets/modules/_layout.scss
@@ -11,9 +11,9 @@ body {
     left: 0;
     width: 200px;
     z-index: 100;
-    background: #444;
+    background: #202020;
     
-    ul.submenu {
+    ul.nav {
         padding: 0;
         
         li {
@@ -63,13 +63,32 @@ body {
 }
 
   
-/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ nav */
-.user-nav {
-    width: 200px;
-    text-transform: uppercase;
-    font-size: 12px;
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ user info */
+.user-info {
+    display: block;
     position: relative;
+    background: #202020;
+    height: 60px;
+    
+    img {
+        position: absolute;
+        top: 8px;
+        left: 8px;
+        height: 42px;
+        width: 42px;
+        border-radius: 2px;
+    }
+    
+    b {
+        color: #fff;
+        font-size: 12px;
+        text-shadow: 1px 1px 1px #000;
+        top: 20px;
+        left: 70px;
+        position: absolute;
+    }
 }
+
 .content-body {
     width: 760px;
     position: relative;
@@ -78,6 +97,13 @@ body {
     padding-top: 0;
 }
     
+.logout {
+    position: absolute;
+    bottom: 10px;
+    color: #fff;
+    font-size: 12px;
+    left: 10px;
+}
 
 .flash {
     position: absolute;
