--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-    
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <%= render :partial => "layouts/messages" %>
     
     <%= link_to "Posts", posts_path %>
     
