--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,21 +1,21 @@
-<div><%= @user.full_name %></div>
-<hr />
+<h1><%= @user.full_name %></h1>
+
 <% if(@user.followed_users.count) %>
 	<h3>Following</h3>
 	<% @user.followed_users.each do |f| %>
 		<div><%= f.full_name %> <%= link_to "Unfollow", unfollow_user_path(f) %></div>
 	<% end %>
 <% end %>
-<hr />
+
 <%= image_tag @user.image_path.url(:profile) %>
 <%= form_for @user, :html => {:autocomplete => "off"} do |f| %>
-    <div>
+    <div class="user-form">
         <%= f.fields_for :location do |l| %>
-            <div><%= l.text_field :city, :placeholder => 'City' %></div>
-            <div><%= l.text_field :state, :placeholder => 'State' %></div>
+            <div class="input"><%= l.text_field :city, :placeholder => 'City' %></div>
+            <div class="input"><%= l.text_field :state, :placeholder => 'State' %></div>
         <% end %>
-        <div><%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %></div>
-        <div><%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %></div>
+        <div class="input"><%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %></div>
+        <div class="input"><%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %></div>
         <div><%= f.text_area :about, :placeholder => "About Me" %></div>
         <div><%= f.label :image_path, 'Update Profile Image'%></div>
         <div><%= f.file_field :image_path %></div>
