git -rm, ben. git -rm

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,7 +6,7 @@
     </a>
     
     <ul class="nav">
-        <li class="active"><a href=""><span class="icon icon-file"></span> Feed Me</a></li>
+        <li class="active"><a href="<%= posts_path %>"><span class="icon icon-file"></span> Feed Me</a></li>
         <li><a href=""><span class="icon icon-search"></span> Find</a></li>
         <li><a href="<%= users_path %>"><span class="icon icon-users"></span> Users</a></li>
     </ul>
