--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -5,6 +5,7 @@
     <title>Log In</title>
     <%= stylesheet_link_tag    "application", :media => "all" %>
     <%= javascript_include_tag "application" %>
+    <%= javascript_include_tag :defaults %>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
 </head>
     <body class="login">
