some layout and post styles

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,13 +1,17 @@
+<div class="search">
+    <span class="icon icon-search"></span>
+    <input placeholder="Find..." type="text" />
+</div>
 <div class="left-controls">
     
     <a href="<%= profile_path %>" class="user-info">
         <%= image_tag current_user.image_path.url(:profile) %> 
-        <b><%= current_user.first_name %> <%= current_user.last_name %></b>
+        <b><%= current_user.first_name %><br /><%= current_user.last_name %></b>
     </a>
     
     <ul class="nav">
-        <li class="active"><a href="<%= posts_path %>"><span class="icon icon-file"></span> Feed Me</a></li>
-        <li><a href=""><span class="icon icon-search"></span> Find</a></li>
+        <li class="active"><a href="<%= posts_path %>"><span class="icon icon-list"></span> Feed Me</a></li>
+        <li><a href=""><span class="icon icon-comment"></span> Messages</a></li>
         <li><a href="<%= users_path %>"><span class="icon icon-users"></span> Users</a></li>
     </ul>
     
