--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,7 @@ article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{di
 @import "modules/layout";
 
 //pages
+@import "modules/post";
 
 //modular
 @import "modules/forms";
