--- a/app/assets/stylesheets/modules/_icons.scss
+++ b/app/assets/stylesheets/modules/_icons.scss
@@ -1,14 +1,14 @@
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ icons */
 
 @font-face {
-    font-family: 'icomoon';
-    src:url('/fonts/icomoon.eot');
-    src:url('/fonts/icomoon.eot?#iefix') format('embedded-opentype'),
-        url('/fonts/icomoon.woff') format('woff'),
-        url('/fonts/icomoon.ttf') format('truetype'),
-        url('/fonts/icomoon.svg#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'icomoon';
+  src:url('/fonts/icomoon.eot?-c5f1kz');
+  src:url('/fonts/icomoon.eot?#iefix-c5f1kz') format('embedded-opentype'),
+    url('/fonts/icomoon.ttf?-c5f1kz') format('truetype'),
+    url('/fonts/icomoon.woff?-c5f1kz') format('woff'),
+    url('/fonts/icomoon.svg?-c5f1kz#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 .icon {
@@ -27,64 +27,186 @@
     color: #ccc;
     -webkit-font-smoothing: antialiased;
 }
-.icon-image:before {
-    font-family: 'icomoon';
-    content: "\e000";
+.icon-paperclip:before {
+  content: "\e600";
 }
-.icon-images:before {
-    font-family: 'icomoon';
-    content: "\e001";
-}
-.icon-home:before {
-    content: "\e002";
-}
-.icon-pencil:before {
-    content: "\e003";
-}
-.icon-file:before {
-    font-family: 'icomoon';
-    content: "\e004";
-}
-.icon-bubbles:before {
-    content: "\e005";
+.icon-user:before {
+  content: "\e601";
 }
 .icon-users:before {
-    content: "\e006";
+  content: "\e602";
 }
-.icon-close:before {
-    content: "\e007";
+.icon-user-add:before {
+  content: "\e603";
 }
-.icon-checkmark:before {
-    content: "\e008";
+.icon-vcard:before {
+  content: "\e604";
 }
-.icon-warning:before {
-    content: "\e009";
+.icon-pencil:before {
+  content: "\e605";
 }
-.icon-code:before {
-    content: "\e00a";
+.icon-mail:before {
+  content: "\e606";
 }
-.icon-menu:before {
-    content: "\e00b";
+.icon-phone:before {
+  content: "\e607";
 }
-.icon-cog:before {
-    font-family: 'icomoon';
-    content: "\e00c";
+.icon-location:before {
+  content: "\e608";
+}
+.icon-chat:before {
+  content: "\e609";
+}
+.icon-comment:before {
+  content: "\e60a";
+}
+.icon-house:before {
+  content: "\e60b";
+}
+.icon-thumbs-up:before {
+  content: "\e60c";
+}
+.icon-thumbs-down:before {
+  content: "\e60d";
 }
 .icon-search:before {
-    content: "\e00d";
+  content: "\e60e";
 }
-.icon-eye-blocked:before {
-    content: "\e00e";
+.icon-link:before {
+  content: "\e60f";
+}
+.icon-camera:before {
+  content: "\e610";
 }
 .icon-eye:before {
-    content: "\e00f";
+  content: "\e611";
+}
+.icon-newspaper:before {
+  content: "\e612";
+}
+.icon-key:before {
+  content: "\e613";
+}
+.icon-lock:before {
+  content: "\e614";
+}
+.icon-lock-open:before {
+  content: "\e615";
+}
+.icon-checkmark:before {
+  content: "\e616";
+}
+.icon-cross:before {
+  content: "\e617";
+}
+.icon-cw:before {
+  content: "\e618";
+}
+.icon-warning:before {
+  content: "\e619";
 }
 .icon-info:before {
-    content: "\e010";
-}
-.icon-move:before {
-    content: "\e011";
+  content: "\e61a";
 }
 .icon-plus:before {
-    content: "\e012";
+  content: "\e61b";
+}
+.icon-minus:before {
+  content: "\e61c";
+}
+.icon-cross2:before {
+  content: "\e61d";
+}
+.icon-list:before {
+  content: "\e61e";
+}
+.icon-list2:before {
+  content: "\e61f";
+}
+.icon-pictures:before {
+  content: "\e620";
+}
+.icon-resize-enlarge:before {
+  content: "\e621";
+}
+.icon-book:before {
+  content: "\e622";
+}
+.icon-resize-shrink:before {
+  content: "\e623";
+}
+.icon-arrow-left:before {
+  content: "\e624";
+}
+.icon-arrow-down:before {
+  content: "\e625";
+}
+.icon-arrow-up:before {
+  content: "\e626";
+}
+.icon-arrow-right:before {
+  content: "\e627";
+}
+.icon-arrow-left2:before {
+  content: "\e628";
+}
+.icon-arrow-down2:before {
+  content: "\e629";
+}
+.icon-arrow-up2:before {
+  content: "\e62a";
+}
+.icon-arrow-right2:before {
+  content: "\e62b";
+}
+.icon-arrow-left3:before {
+  content: "\e62c";
+}
+.icon-uniE62D:before {
+  content: "\e62d";
+}
+.icon-tumblr:before {
+  content: "\e62e";
+}
+.icon-linkedin:before {
+  content: "\e62f";
+}
+.icon-facebook:before {
+  content: "\e630";
+}
+.icon-vimeo:before {
+  content: "\e631";
+}
+.icon-twitter:before {
+  content: "\e632";
+}
+.icon-googleplus:before {
+  content: "\e633";
+}
+.icon-pinterest:before {
+  content: "\e634";
+}
+.icon-skype:before {
+  content: "\e635";
+}
+.icon-soundcloud:before {
+  content: "\e636";
+}
+.icon-behance:before {
+  content: "\e637";
+}
+.icon-spotify:before {
+  content: "\e638";
+}
+.icon-tools:before {
+  content: "\e639";
+}
+.icon-cog:before {
+  content: "\e63a";
+}
+.icon-star:before {
+  content: "\e63b";
+}
+.icon-star2:before {
+  content: "\e63c";
 }
