--- a/app/assets/stylesheets/modules/_layout.scss
+++ b/app/assets/stylesheets/modules/_layout.scss
@@ -2,6 +2,42 @@ body {
     font-family: 'Open Sans', sans-serif;
     color: #333;
     background: $background;
+    padding-top: 80px;
+}
+
+.search {
+    position: fixed;
+    width: 810px;
+    top: 0;
+    left: 200px;
+    height: 60px;
+    background: #fff;
+    border-bottom: 1px solid #ddd;
+    z-index: 100;
+    
+    input {
+        background: transparent;
+        width: 540px;
+        height: 40px;
+        padding: 10px 200px 10px 70px;
+        border: 0;
+        margin: 0;
+        font-size: 30px;
+        position: relative;
+        z-index: 2;
+    }
+    
+    .icon {
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 38px;
+        height: 38px;
+        font-size: 40px;
+        padding: 10px;
+        border-right: 1px dotted #ccc;
+        color: #ddd;
+    }
 }
 
 .left-controls {
@@ -14,28 +50,30 @@ body {
     background: #202020;
     
     ul.nav {
-        padding: 0;
+        padding: 20px 0 0 0;
         
         li {
+            padding: 4px 10px;
             
             a {
                 font-size: 14px;
                 display: block;
-                padding: 20px 5px 20px 75px;
-                color: #dadada;
-                width: 120px;
+                padding: 10px 5px 10px 60px;
+                color: #666;
                 cursor: pointer;
                 position: relative;
                 height: 20px;
+                border-radius: 2px;
                 
                 .icon {
-                    color: #dadada;
+                    color: #333;
                     position: absolute;
-                    width: 12px;
-                    height: 12px;
-                    padding: 24px;
+                    width: 17px;
+                    height: 17px;
+                    font-size: 18px;
+                    padding: 11px;
                     left: 0;
-                    top: 0; 
+                    top: 0;
                 }
                 
                 &:hover,
@@ -49,13 +87,13 @@ body {
         li.active {
             
             a {
-                border-bottom: 3px solid #ddd;
-                color: #333;
-                background: $background;
+                color: #202020;
+                background: #eee;
+                border-bottom: 2px solid #ccc;
                 
                 .icon {
-                    color: #57ad68;
-                    border-right: 1px dotted #ddd;
+                    color: $red;
+                    border-right: 1px dotted #ccc;
                 }
             }
         }
@@ -67,34 +105,37 @@ body {
 .user-info {
     display: block;
     position: relative;
-    background: #202020;
+    background: #181a1b;
     height: 60px;
     
     img {
         position: absolute;
         top: 8px;
         left: 8px;
-        height: 42px;
-        width: 42px;
+        height: 44px;
+        width: 44px;
         border-radius: 2px;
     }
     
     b {
-        color: #fff;
+        color: #999;
         font-size: 12px;
-        text-shadow: 1px 1px 1px #000;
-        top: 20px;
+        top: 13px;
         left: 70px;
         position: absolute;
+        font-weight: normal;
+    }
+    
+    &:hover {
+        background: #000;
     }
 }
 
 .content-body {
-    width: 760px;
+    width: 770px;
     position: relative;
     left: 0px;
-    margin-left: 250px;
-    padding-top: 0;
+    margin-left: 240px;
 }
     
 .logout {
