--- a/app/assets/stylesheets/modules/_mixins.scss
+++ b/app/assets/stylesheets/modules/_mixins.scss
@@ -1,7 +1,7 @@
 /* colors */
 $background: #f2f2f2;
 
-$grey      : #eee;
+$grey      : #ddd;
 $darkgrey  : #999;
 
 $red       : #df6363;
@@ -14,7 +14,7 @@ $darkgreen : #48a15a;
     border-radius: 2px;
     border-bottom: 2px solid $grey;
     background: #fff;
-    box-shadow: 1px 1px 1px $grey;
+    box-shadow: 1px 1px 2px $grey;
     padding: 20px;
 }
 
