--- a/app/assets/stylesheets/modules/_forms.scss
+++ b/app/assets/stylesheets/modules/_forms.scss
@@ -23,7 +23,7 @@ span.required {
     position: relative;
     
     h2 {
-        background: #404040;
+        background: $darkbackground;
         padding: 20px 40px;
         color: #fff;
         border-radius: 2px 2px 0 0;
