--- a/app/assets/stylesheets/modules/_mixins.scss
+++ b/app/assets/stylesheets/modules/_mixins.scss
@@ -1,5 +1,6 @@
 /* colors */
-$background: #f2f2f2;
+$background: #eee;
+$darkbackground: #2a2e33;
 
 $grey      : #ddd;
 $darkgrey  : #999;
@@ -9,6 +10,9 @@ $darkred   : #df6363;
 
 $green     : #57ad68;
 $darkgreen : #48a15a;
+
+$yellow     : #ffefa6;
+$darkyellow : #ffd200;
 
 @mixin box(){
     border-radius: 2px;
