--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -17,6 +17,7 @@
         <% end %>
         <div class="input"><%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %></div>
         <div class="input"><%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %></div>
+        <div class="input"><%= f.text_field :title, :placeholder => "Job Title", :autocomplete => "off" %></div>
         <div><%= f.text_area :about, :placeholder => "About Me" %></div>
         <div><%= f.label :image_path, 'Update Profile Image'%></div>
         <div><%= f.file_field :image_path %></div>
