--- a/app/assets/stylesheets/modules/_mixins.scss
+++ b/app/assets/stylesheets/modules/_mixins.scss
@@ -2,6 +2,9 @@
 $background: #eee;
 $darkbackground: #2a2e33;
 
+$blue      : #009bff;
+$darkblue  : #0080d3;
+
 $grey      : #ddd;
 $darkgrey  : #999;
 
