more profile layout

--- a/app/assets/stylesheets/modules/_mixins.scss
+++ b/app/assets/stylesheets/modules/_mixins.scss
@@ -3,8 +3,11 @@ $background: #eee;
 $darkbackground: #2a2e33;
 
 $blue      : #009bff;
+$lightblue : #edf6f9;
 $darkblue  : #0080d3;
+$fadeblue  : #9da4ac;
 
+$lightgrey : #eee;
 $grey      : #ddd;
 $darkgrey  : #999;
 
