--- a/app/assets/stylesheets/modules/_general.scss
+++ b/app/assets/stylesheets/modules/_general.scss
@@ -19,8 +19,10 @@ a {
 }
 
 h1 {
-    font-size: 24px;
-    margin-bottom: 20px
+    font-size: 26px;
+    margin-bottom: 5px;
+    font-weight: bold;  
+    color: $darkbackground;
 }
 
 .left {
@@ -28,6 +30,9 @@ h1 {
 }
 .right {
     float: right;
+}
+.clb {
+    clear: both;
 }
 .btn {
     border-radius: 2px;
