--- a/app/assets/stylesheets/modules/_layout.scss
+++ b/app/assets/stylesheets/modules/_layout.scss
@@ -64,7 +64,7 @@ body {
             left: 0;
             color: #d8d7d2;
             font-weight: bold;
-            background: #edf6f9;
+            background: $lightblue;
             text-align: center;
             border-radius: 2px;
             
@@ -129,10 +129,6 @@ body {
                     height: 60px;
                     width: 60px;
                     font-size: 60px; 
-                    
-                    &:hover {
-                        color: $darkblue;
-                    }
                 }
                 .count {
                     color: #fff;
@@ -142,6 +138,10 @@ body {
                     left: 8px;
                     text-align: center;
                     width: 47px;
+                }
+                
+                &:hover .icon {
+                    color: $darkblue;
                 }
             }
           
