--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -17,7 +17,7 @@
 
             <div class="user-info">
             
-                <a href="<%= profile_path %>"><%= image_tag current_user.image_path.url(:profile) %></a>
+                <a href="<%= profile_path %>"><%= image_tag current_user.image_path.url(:thumb) %></a>
 
                 <b><a href="<%= profile_path %>"><%= current_user.first_name %> <%= current_user.last_name %></a></b>
                 <a class="logout" data-method="delete" href="<%= destroy_user_session_path %>"><span class="icon icon-close"></span> Log Out</a>
