--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -26,10 +26,7 @@
 <% end %>
 <hr />
 <h3>New Post</h3>
-<%= form_for Post.new do |p| %>
-	<div><%= p.text_area :content, :placeholder => 'Say Something...' %></div>
-	<%= p.submit "Post" %>
-<% end %>
+<%= render :partial => 'posts/form' %>
 <hr />
 <h3>Posts</h3>
 <% @user.posts.recent().each do |p| %>
