--- a/app/views/users/me.html.erb
+++ b/app/views/users/me.html.erb
@@ -1,31 +1,30 @@
 <div class="profile">
     
-    <div class="header">
+    <div class="profile-header">
         
         <%= image_tag @user.image_path.url(:profile) %>
         <h1><%= @user.full_name %></h1>
         <div class="title"><%= @user.title %></div>
         
-        
     </div>
     
     <div class="user-info">
             
-        <div class="pill following">
+        <a class="pill following">
             <span>20</span> following
-        </div>
+        </a>
         
-        <div class="pill followers">
+        <a class="pill followers">
             <span>14</span> followers
-        </div>
+        </a>
         
-        <div class="pill location">
+        <a class="pill location">
             <span class="icon icon-location"></span> <%= @user.location.city %>, <%= @user.location.state %>
-        </div>
+        </a>
         
-        <div class="pill follow-status following">
+        <a class="pill follow-status active">
             <span class="icon icon-checkmark"></span> Following
-        </div>
+        </a>
         
         <div class="clb"></div>
         
@@ -49,7 +48,7 @@
             <div class="input"><%= f.text_field :first_name, :placeholder => "First Name", :autocomplete => "off" %></div>
             <div class="input"><%= f.text_field :last_name, :placeholder => "Last Name", :autocomplete => "off" %></div>
             <div class="input"><%= f.text_field :title, :placeholder => "Job Title", :autocomplete => "off" %></div>
-            <div><%= f.text_area :about, :placeholder => "About Me" %></div>
+            <!-- <div><%= f.text_area :about, :placeholder => "About Me" %></div> -->
             <div><%= f.label :image_path, 'Update Profile Image'%></div>
             <div><%= f.file_field :image_path %></div>
         </div>
@@ -63,3 +62,4 @@
     <h3>Posts</h3>
     <%= render :partial => 'posts/post', :collection => @user.posts %>
 </div>
+
