--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -4,7 +4,7 @@
         <%= image_tag post.user.image_path.url(:thumb) %> 
         <div class="header">
             <div class="name"><%= post.user.full_name %></div>
-            <div class="title"><%= post.user.title %></div>
+            <div class="title">title</div>
         </div>
         
         <p><%= post.content %></p>
