--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
         
         <%= image_tag @user.image_path.url(:profile) %>
         <h1><%= @user.full_name %></h1>
-        <div class="title"><%= @user.title %></div>
+        <div class="title">Title</div>
         
     </div>
     
