--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,8 @@
 <%= form_for Post.new do |p| %>
-    <div><%= p.text_area :content, :placeholder => 'Say Something...' %></div>
-    <%= p.submit "Post" %>
+    <div class="new-post">
+        <h3><span class="icon icon-pencil"></span> New</h3>
+        <%= p.text_area :content, :placeholder => 'Say Something...', :class => 'expanding' %>
+        <%= p.submit "Post" %>
+    
+    </div>
 <% end %>
