--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -24,7 +24,7 @@
             </div>
             
             <a class="messages" href="">
-                <span class="count">23</span>
+                <span class="count"><%= current_user.messages.unread.count %></span>
                 <span class="icon icon-comment"></span>
             </a>
         </div>
