minor removals, links, and buttons

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,7 +2,7 @@
     <div class="new-post">
         <h3><span class="icon icon-pencil"></span> New</h3>
         <%= p.text_area :content, :placeholder => 'Say Something...', :class => 'expanding' %>
-        <%= p.submit "Post" %>
+        <%= p.submit "Post", :class => "btn" %>
     
     </div>
 <% end %>
